# rilirili

./: .gitignore  Cargo.00  Cargo.toml  README.md
lib/borealis-rs/: Cargo.toml  README.md  cp.sh
lib/borealis-rs/examples/: android.rs  android_borealis.rs  libmpv2_framebuffer.rs  libmpv2_pure.rs  libmpv2_sdl2.rs  opengl.rs  opengl_framebuffer.rs  opengl_mpv.rs  static_dispatch.rs  window.rs  window_borealis.rs
lib/borealis-rs/resources/xml/activity/: box.xml  main.xml  test_image.xml  test_tab_frame.xml
lib/borealis-rs/resources/xml/tabs/: test_applet_frame.xml  text_test_v0.xml  text_test_v1.xml
lib/borealis-rs/src/: lib.rs
lib/borealis-rs/src/core/: actions.rs  activity.rs  animation.rs  application.rs  attribute.rs  audio.rs  bind.rs  event.rs  font.rs  frame_context.rs  geometry.rs  global.rs  input.rs  mod.rs  platform.rs  resource.rs  sdl_context.rs  style.rs  theme.rs  time.rs  tweening.rs  view.rs  view_base.rs  view_box.rs  view_creator.rs  view_drawer.rs  view_layout.rs  view_style.rs  views.rs
lib/borealis-rs/src/demo/: mod.rs
lib/borealis-rs/src/demo/activity/: main_activity.rs  mod.rs
lib/borealis-rs/src/demo/tab/: captioned_image.rs  components_tab.rs  mod.rs  recycling_list_tab.rs
lib/borealis-rs/src/lib0/: mod.rs
lib/borealis-rs/src/lib0/core/: actions.rs  activity.rs  animation.rs  application.rs  audio.rs  base_view.rs  bind.rs  box.rs  event.rs  frame_context.rs  i18n.rs  input.rs  mod.rs  platform.rs  style.rs  task.rs  time.rs  timer.rs  util.rs  video.rs  view.rs  xml.rs
lib/borealis-rs/src/lib0/views/: applet_frame.rs  button.rs  header.rs  image.rs  label.rs  mod.rs  rectangle.rs  scrolling_frame.rs  sidebar.rs  tab_frame.rs
lib/borealis-rs/src/lib1/: mod.rs
lib/borealis-rs/src/lib1/core/: application.rs  font.rs  input.rs  mod.rs  platform.rs  theme.rs  video.rs  view.rs
lib/borealis-rs/src/views/: applet_frame.rs  bottom_bar.rs  button.rs  debug_layer.rs  dialog.rs  dropdown.rs  edit_text_dialog.rs  h_scrolling_frame.rs  header.rs  hint.rs  image.rs  label.rs  mod.rs  progress_spinner.rs  rectangle.rs  recycler.rs  scrolling_frame.rs  sidebar.rs  slider.rs  tab_frame.rs  video.rs
src/: main.rs
src/utils/: register.rs
