[package]
name = "borealis-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
raw-window-handle = "0.5.0"
log = "0.4.22"
anyhow = "1.0.86"
yoga-sys = "0.2.3"
chrono = "0.4.38"
lazy_static = "1.5.0"
sdl2 = "0.35.2"
gl = "0.14.0"
env_logger = { version = "0.10", default-features = false, features = ["auto-color"] }
roxmltree = "0.20.0"
rust-embed = "8.4.0"

[target.'cfg(not(target_os = "android"))'.dependencies]
nanovg-sys = { git = "https://github.com/FayeSpica/nanovg-rs.git", tag = "v1.0.2glesv3", default-features = false, features = ["gl3"] }
libmpv2-sys = { git = "https://github.com/FayeSpica/libmpv2-rs.git", tag = "v0.0.2" }

[target.'cfg(target_os = "android")'.dependencies]
nanovg-sys = { git = "https://github.com/FayeSpica/nanovg-rs.git", tag = "v1.0.2glesv3", default-features = false, features = ["gles3"] }
android_log = "0.1.3"

[features]
mpv = []
default = []

[[example]]
name = "android_borealis"
path = "examples/android_borealis.rs"
crate-type = ["cdylib"]
